# mkdocs-run-shell-cmd-plugin

./: .markdownlint.json  .pre-commit-config.yaml  404.html  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: examples.md  index.md
docs/css/: tasklist.css
examples/: index.html
license/: index.html
mkdocs_run-shell-cmd_plugin/: plugin.py
mkdocs_run_shell_cmd_plugin/: plugin.py
search/: search_index.json
todo/: index.html
